--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "cookie": "^0.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "mongodb": "^5.6.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
+    "recoil": "^0.7.7"
   }
 }
