--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "cookie": "^0.5.0",
     "eslint": "8.43.0",
