--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build-job:
       docker build
       -t $CI_REGISTRY_IMAGE
       --build-arg KAKAO_REST_API_KEY="$KAKAO_REST_API_KEY"
-      --build-arg MOGODB_URL="$MOGODB_URL"
+      --build-arg MONGODB_URI="$MONGODB_URI"
       --build-arg KAKAO_REDIRECT_URI="$KAKAO_REDIRECT_URI"
       --no-cache .
     - docker push $CI_REGISTRY_IMAGE
@@ -38,7 +38,7 @@ deploy-job:
       --name $CI_PROJECT_PATH_SLUG
       --restart always
       -e KAKAO_REST_API_KEY="$KAKAO_REST_API_KEY"
-      -e MOGODB_URL="$MOGODB_URL"
+      -e MONGODB_URI="$MONGODB_URI"
       -e KAKAO_REDIRECT_URI="$KAKAO_REDIRECT_URI"
       --label traefik.enable=true
       --label traefik.http.routers.$CI_PROJECT_PATH_SLUG.entrypoints=https,http
