--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint-config-next": "13.4.7",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongodb": "^5.6.0",
     "next": "13.4.7",
     "react": "18.2.0",
