--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7"
-  }
+  },
+  "devDependencies": {
+    "@types/node": "20.4.7",
+    "@types/react": "^18.2.18",
+    "typescript": "^5.1.6"
+  },
+  "packageManager": "yarn@1.22.19"
 }
