--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/node": "20.4.7",
     "@types/react": "^18.2.18",
     "typescript": "^5.1.6"
