--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "20.4.7",
     "@types/react": "^18.2.18",
     "typescript": "^5.1.6"
