--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-.env
-.env.development
-.env.production
-.env.test
-.env.local
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
