--- a/package.json
+++ b/package.json
@@ -9,27 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.1",
-    "axios": "^1.4.0",
-    "cookie": "^0.5.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "exceljs": "^4.3.0",
-    "file-saver": "^2.0.5",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
-    "mongodb": "^5.6.0",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "recoil": "^0.7.7"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.5.1",
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "20.4.7",
-    "@types/react": "^18.2.18",
-    "typescript": "^5.1.6"
-  },
-  "packageManager": "yarn@1.22.19"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0"
+  }
 }
