--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@types/cookie": "^0.6.0",
-    "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.7",
     "cookie": "^0.6.0",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.2.2",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
