--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.6.0",
     "jose": "^5.2.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
