--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cookie": "^0.6.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jose": "^5.2.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
