--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "youtube-search": "^1.1.6"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
