--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,37 @@
   "short_name": "디풀",
   "description": "그래그래 드디어 왔다 디미고인 풀 서비스 V3",
   "icons": [
-    { "src": "/favicon.ico", "type": "image/x-icon", "sizes": "16x16 32x32" },
-    { "src": "public/icons/icon-192.png", "type": "image/png", "sizes": "192x192" },
-    { "src": "public/icons/icon-512.png", "type": "image/png", "sizes": "512x512" },
-    { "src": "public/icons/icon-192-maskable.png", "type": "image/png", "sizes": "192x192", "purpose": "maskable" },
-    { "src": "public/icons/icon-512-maskable.png", "type": "image/png", "sizes": "512x512", "purpose": "maskable" }
+    { 
+      "src": "/favicon.ico", 
+      "type": "image/x-icon", 
+      "sizes": "16x16 32x32"
+    },
+    { 
+      "src": "public/icons/icon-192.png", 
+      "type": "image/png", 
+      "sizes": "192x192"
+    },
+    { 
+      "src": "public/icons/icon-512.png", 
+      "type": "image/png", 
+      "sizes": "512x512"
+    },
+    { 
+      "src": "public/icons/icon-192-maskable.png", 
+      "type": "image/png", 
+      "sizes": "192x192", 
+      "purpose": "maskable"
+    },
+    { 
+      "src": "public/icons/icon-512-maskable.png", 
+      "type": "image/png", 
+      "sizes": "512x512", 
+      "purpose": "maskable"
+    }
   ],
   "start_url": "/",
   "display": "fullscreen",
+  "orientation": "portrait-primary",
   "theme_color": "#4054d6",
   "background_color": "#fafaff"
 }
