--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,23 +9,23 @@
       "sizes": "16x16 32x32"
     },
     { 
-      "src": "public/icons/icon-192.png", 
+      "src": "/public/icons/icon-192.png", 
       "type": "image/png", 
       "sizes": "192x192"
     },
     { 
-      "src": "public/icons/icon-512.png", 
+      "src": "/public/icons/icon-512.png", 
       "type": "image/png", 
       "sizes": "512x512"
     },
     { 
-      "src": "public/icons/icon-192-maskable.png", 
+      "src": "/public/icons/icon-192-maskable.png", 
       "type": "image/png", 
       "sizes": "192x192", 
       "purpose": "maskable"
     },
     { 
-      "src": "public/icons/icon-512-maskable.png", 
+      "src": "/public/icons/icon-512-maskable.png", 
       "type": "image/png", 
       "sizes": "512x512", 
       "purpose": "maskable"
