--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "youtube-search": "^1.1.6"
   },
   "devDependencies": {
