rename: app_url & username

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 MONGODB_URI=
 JWT_SECRET=
 NEXT_PUBLIC_DIMIGOIN_URI=
-NEXT_PUBLIC_REDIRECT_URI=
+NEXT_PUBLIC_APP_URI=
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
