--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
+NEXT_PUBLIC_DIMIGOIN_URI=https://dimigo.in
+NEXT_PUBLIC_APP_URI=http://0.0.0.0:3000
 MONGODB_URI=
 JWT_SECRET=
-NEXT_PUBLIC_DIMIGOIN_URI=
-NEXT_PUBLIC_APP_URI=
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
