--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fireworks-js/react": "^2.10.7",
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.7",
     "cookie": "^0.6.0",
@@ -22,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
     "youtube-search": "^1.1.6"
   },
   "devDependencies": {
