--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_DIMIGOIN_URI=https://dimigo.in
 NEXT_PUBLIC_APP_URI=http://0.0.0.0:3000
+NEXT_PUBLIC_DIMIGOIN_KEY=66010f040e58219c0beed560
 MONGODB_URI=
 JWT_SECRET=
 NEIS_API_KEY=
