--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
+    "swiper": "^11.1.0",
     "youtube-search": "^1.1.6"
   },
   "devDependencies": {
