feat: game list

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie": "^0.6.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "firebase": "^10.10.0",
     "jose": "^5.2.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
