--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,13 @@ MONGODB_URI=
 JWT_SECRET=
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
+NEXT_PUBLIC_INSTA_TAG=개발테스트용게시물입니다최재민
+
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_DATABASE_URL=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
+FIREBASE_MEASUREMENT_ID=
