--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
+    "sweetalert2": "^11.10.7",
     "youtube-search": "^1.1.6"
   },
   "devDependencies": {
