--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
+MONGODB_URI=mongodb://localhost:27017/dimigoin-pull-service-2
 NEXT_PUBLIC_DIMIGOIN_URI=https://dimigo.in
-NEXT_PUBLIC_APP_URI=http://0.0.0.0:3000
 NEXT_PUBLIC_DIMIGOIN_KEY=66010f040e58219c0beed560
-MONGODB_URI=
-JWT_SECRET=
+NEXT_PUBLIC_SERVER_HOSTNAME=http://dev.dimigo.net
+NEXT_PUBLIC_SERVER_PORT=3000
+NEXT_PUBLIC_APP_URI=$NEXT_PUBLIC_SERVER_HOSTNAME:$NEXT_PUBLIC_SERVER_PORT
+NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
+
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
-NEXT_PUBLIC_INSTA_TAG=개발테스트용게시물입니다최재민
+JWT_SECRET=
 
 FIREBASE_API_KEY=
 FIREBASE_AUTH_DOMAIN=
