--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.12",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "sweetalert2": "^11.10.7",
