--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fireworks-js/react": "^2.10.7",
+    "@uiw/react-markdown-editor": "^6.1.1",
+    "@uiw/react-markdown-preview": "^5.1.1",
     "@vercel/analytics": "^1.2.2",
     "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
     "axios": "^1.6.7",
