--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "sweetalert2": "^11.10.7",
+    "xss": "^1.0.15",
     "youtube-search": "^1.1.6"
   },
   "devDependencies": {
