--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
     "react-toastify": "^10.0.5",
@@ -38,6 +39,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
