--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: curl -fsSL https://bun.sh/install | bash && bun install && bun run build
+  - init: curl -fsSL https://bun.sh/install | bash && source ~/.bashrc && bun install && bun run build
     command: bun dev
 
 
