fix: .gitpod.yml

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,12 +4,13 @@ image:
 tasks:
   - name: nextjs
     init: |
+      mkdir -p /workspace/data
       curl -fsSL https://bun.sh/install | bash && source ~/.bashrc 
       bun install
-    command: bun dev
-  - name: database
-    command: mkdir -p /workspace/data && mongod --fork --dbpath /workspace/data
-
+    command: |
+      mongod --fork --logpath /var/log/mongod.log --dbpath /workspace/data
+      bun dev
+      
 ports:
   - name: mognodb
     port: 27017
