--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,13 +7,13 @@ tasks:
       mkdir -p /workspace/data && mongod --dbpath /workspace/data --fork --logpath /workspace/data/mongod.log
       bun dev
 
-image:
-    file: .gitpod.dockerfile
-
 ports:
   - name: mognodb
     port: 27017
     onOpen: ignore
+  - name: mognodb-express
+    port: 8081
+    onOpen: open-browser
   - name: NEXT.JS
     port: 3000
     onOpen: open-browser
