fix: server white space

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-MONGODB_URI=mongodb://localhost:27017/dimigoin-pull-service-2
-NEXT_PUBLIC_DIMIGOIN_URI=https://dimigo.in
-NEXT_PUBLIC_DIMIGOIN_KEY=66010f040e58219c0beed560
-NEXT_PUBLIC_SERVER_HOSTNAME=http://dev.dimigo.net
-NEXT_PUBLIC_SERVER_PORT=3000
-NEXT_PUBLIC_APP_URI=$NEXT_PUBLIC_SERVER_HOSTNAME:$NEXT_PUBLIC_SERVER_PORT
+NEXT_PUBLIC_DIMIGOIN_URI=https://auth.dimigo.net
 NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
+
+MONGODB_URI=mongodb://root:password@localhost:27017/dimigoin-pull-service-v3?authSource=admin&directConnection=true
+NEXT_PUBLIC_APP_URI=http://localhost:3000
+NEXT_PUBLIC_DIMIGOIN_KEY=
 
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
