--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
 
 MONGODB_URI=mongodb://root:password@localhost:27017/dimigoin-pull-service-v3?authSource=admin&directConnection=true
 NEXT_PUBLIC_DIMIGOIN_KEY=
+TEACHERS_CODE=
 
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
