--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ NEXT_PUBLIC_DIMIGOIN_URI=https://auth.dimigo.net
 NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
 
 MONGODB_URI=mongodb://root:password@localhost:27017/dimigoin-pull-service-v3?authSource=admin&directConnection=true
-NEXT_PUBLIC_DIMIGOIN_KEY=
+NEXT_PUBLIC_DIMIGOIN_KEY=(CREATE KEY AT https://auth.dimigo.net/dev/add)
+
 TEACHERS_CODE=
 
 NEIS_API_KEY=
