--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db_init": "bun run ./init/index.ts"
   },
   "dependencies": {
     "@fireworks-js/react": "^2.10.7",
