write: readme.md

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
-NEXT_PUBLIC_DIMIGOIN_URI=https://auth.dimigo.net
-NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
-
+# Essential
 MONGODB_URI=mongodb://localhost:27017/dimigoin-pull-service-v3
 NEXT_PUBLIC_DIMIGOIN_KEY=(CREATE KEY AT https://auth.dimigo.net/dev/add)
 JWT_SECRET=(WRITE RANDOM STRING HERE)
 
-TEACHERS_CODE=
+# Default
+NEXT_PUBLIC_DIMIGOIN_URI=https://auth.dimigo.net
+NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
 
+# Optional
+TEACHERS_CODE=
 NEIS_API_KEY=
 YOUTUBE_API_KEY=
 
