feat: change og

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "디풀",
   "short_name": "디풀",
-  "description": "그래그래 드디어 왔다 디풀",
+  "description": "한국디지털미디어고등학교 인트라넷의 새 이름, 디풀. (디미고인 풀 서비스)",
   "icons": [
     { 
       "src": "/favicon.ico", 
