feat: meals cron

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 MONGODB_URI=mongodb://localhost:27017/dimigoin-pull-service-v3
 NEXT_PUBLIC_DIMIGOIN_KEY=(CREATE KEY AT https://auth.dimigo.net/dev/add)
 JWT_SECRET=(WRITE RANDOM STRING HERE)
-
+CRON_SECRET=(WRITE RANDOM STRING HERE)
 # Default
 NEXT_PUBLIC_DIMIGOIN_URI=https://auth.dimigo.net
 NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
