--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fireworks-js/react": "^2.10.7",
     "@next/third-parties": "^14.2.3",
+    "@types/lodash": "^4.17.5",
     "@uiw/react-markdown-editor": "^6.1.1",
     "@uiw/react-markdown-preview": "^5.1.1",
     "@vercel/analytics": "^1.2.2",
@@ -22,10 +23,12 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
     "jose": "^5.2.2",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
+    "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
