--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db_init": "bun run ./init/index.ts"
+    "db_init": "bun run ./init/index.ts",
+    "db_init_test": "bun run ./init/test.ts"
   },
   "dependencies": {
     "@fireworks-js/react": "^2.10.7",
