--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   "rules": {
     "react/prop-types": "off",
     "react/display-name": "off",
+    "object-curly-spacing": ["error", "always"],
     "indent": [
       "error",
       2
