--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Essential
 MONGODB_URI=mongodb://localhost:27017/dimigoin-pull-service-v3
-NEXT_PUBLIC_DIMIGOIN_KEY=(CREATE KEY AT https://auth.dimigo.net/dev/add)
+NEXT_PUBLIC_DIMIGOIN_KEY=(CREATE KEY AT https://auth.dimigo.net/developers/add)
 JWT_SECRET=(WRITE RANDOM STRING HERE)
 CRON_SECRET=(WRITE RANDOM STRING HERE)
 # Default
