--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "react-hooks"
   ],
   "rules": {
+    "object-curly-spacing": ["error", "always"],
     "react/prop-types": "off",
     "react/display-name": "off",
     "object-curly-spacing": ["error", "always"],
