--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fireworks-js/react": "^2.10.7",
     "@next/third-parties": "^14.2.3",
     "@types/lodash": "^4.17.5",
+    "@types/web-push": "^3.6.3",
     "@uiw/react-markdown-editor": "^6.1.1",
     "@uiw/react-markdown-preview": "^5.1.1",
     "@vercel/analytics": "^1.2.2",
@@ -36,6 +37,7 @@
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "sweetalert2": "^11.11.0",
+    "web-push": "^3.6.7",
     "xss": "^1.0.15",
     "youtube-search": "^1.1.6"
   },
