--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ MONGODB_URI=mongodb://localhost:27017/dimigoin-pull-service-v3
 NEXT_PUBLIC_DIMIGOIN_KEY=(CREATE KEY AT https://auth.dimigo.net/developers/add)
 JWT_SECRET=(WRITE RANDOM STRING HERE)
 CRON_SECRET=(WRITE RANDOM STRING HERE)
+VAPID_PUBLIC_KEY=(CREATE WITH webpush.generateVAPIDKeys() in Node.js)
+VAPID_PRIVATE_KEY=(CREATE WITH webpush.generateVAPIDKeys() in Node.js)
+
 # Default
 NEXT_PUBLIC_DIMIGOIN_URI=https://auth.dimigo.net
 NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
