--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/analytics": "^1.2.2",
     "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
     "axios": "^1.6.7",
+    "comcigan": "^3.0.4",
     "cookie": "^0.6.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
