--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/cron/notification",
       "schedule": "* * * * *"
+    },
+    {
+      "path": "/cron/timetable",
+      "schedule": "0 0 * * *"
     }
   ]
 }
