feat: add recaptcha at machine page

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ NEXT_PUBLIC_INSTA_TAG=디미고_체육대회
 # Optional
 TEACHERS_CODE=
 YOUTUBE_API_KEY=
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
 
 FIREBASE_API_KEY=
 FIREBASE_AUTH_DOMAIN=
