--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-qr-code": "^2.0.12",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
@@ -49,6 +50,7 @@
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
