--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "tailwindcss-safe-area": "^0.5.1"
   },
   "devDependencies": {
