--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-markdown-editor": "^6.1.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
