--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@tanstack/react-query": "^5.51.11",
     "@uiw/react-markdown-editor": "^6.1.2",
     "axios": "^1.7.2",
+    "comcigan": "^3.0.4",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "mongoose": "^8.5.1",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
