--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@uiw/react-markdown-editor": "^6.1.2",
     "axios": "^1.7.2",
     "comcigan": "^3.0.4",
+    "jose": "^5.6.3",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.8.0",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
