--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,7 +31,7 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": "/login",
+  "start_url": "/",
   "display": "fullscreen",
   "orientation": "portrait-primary"
 }
