--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.7",
-    "tailwindcss-safe-area": "^0.5.1"
+    "tailwindcss-safe-area": "^0.5.1",
+    "youtube-search": "^1.1.6"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
