--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.11",
     "@uiw/react-markdown-editor": "^6.1.2",
+    "@uiw/react-markdown-preview": "^5.1.2",
     "axios": "^1.7.2",
     "comcigan": "^3.0.4",
     "jose": "^5.6.3",
