--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "tailwindcss-safe-area": "^0.5.1",
+    "xss": "^1.0.15",
     "youtube-search": "^1.1.6"
   },
   "devDependencies": {
