--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-markdown-preview": "^5.1.2",
     "axios": "^1.7.2",
     "comcigan": "^3.0.4",
+    "dom-to-image": "^2.6.0",
     "jose": "^5.6.3",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
@@ -22,7 +23,6 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-to-print": "^2.15.1",
     "recoil": "^0.7.7",
     "tailwindcss-safe-area": "^0.5.1",
     "xss": "^1.0.15",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.51.11",
+    "@types/dom-to-image": "^2.6.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
