--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/timetable/cron",
       "schedule": "0 22 * * *"
+    },
+    {
+      "path": "/meal/cron",
+      "schedule": "0 22 * * *"
     }
   ]
 }
