--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-markdown-editor": "^6.1.2",
     "@uiw/react-markdown-preview": "^5.1.2",
     "axios": "^1.7.2",
+    "cheerio": "^1.0.0",
     "comcigan": "^3.0.4",
     "dom-to-image": "^2.6.0",
     "jose": "^5.6.3",
