--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uiw/react-markdown-preview": "^5.1.2",
     "axios": "^1.7.2",
     "cheerio": "^1.0.0",
+    "cloudscraper": "^4.6.0",
     "comcigan": "^3.0.4",
     "dom-to-image": "^2.6.0",
     "jose": "^5.6.3",
